--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha  'test/**/*.js' --timeout 10000"
   },
   "repository": {
     "type": "git",
@@ -19,13 +19,18 @@
   },
   "homepage": "https://github.com/fever2288/starWarsFanClubServer#readme",
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "mocha": "^8.0.1",
+    "nodemon": "^2.0.4",
+    "sinon": "^9.0.2"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "axios": "^0.19.2",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "expect": "^26.1.0",
     "express": "^4.17.1",
     "swagger-ui-express": "^4.1.4",
     "yamljs": "^0.3.0"
